# critical_es_value

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  genindex.html  index.html  justfile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/autoapi/: index.doctree
.doctrees/autoapi/critical_es_value/: index.doctree
.doctrees/autoapi/critical_es_value/corrtest/: index.doctree
.doctrees/autoapi/critical_es_value/linreg/: index.doctree
.doctrees/autoapi/critical_es_value/ttest/: index.doctree
.doctrees/autoapi/critical_es_value/utils/: index.doctree
.github/workflows/: documentation.yaml  publish.yaml  release-please.yaml
_sources/autoapi/: index.rst.txt
_sources/autoapi/critical_es_value/: index.rst.txt
_sources/autoapi/critical_es_value/corrtest/: index.rst.txt
_sources/autoapi/critical_es_value/linreg/: index.rst.txt
_sources/autoapi/critical_es_value/ttest/: index.rst.txt
_sources/autoapi/critical_es_value/utils/: index.rst.txt
autoapi/: index.html
autoapi/critical_es_value/: index.html
autoapi/critical_es_value/corrtest/: index.html
autoapi/critical_es_value/linreg/: index.html
autoapi/critical_es_value/ttest/: index.html
autoapi/critical_es_value/utils/: index.html
docs/: conf.py  index.rst
src/critical_es_value/: __init__.py  corr_test.py  corrtest.py  linreg.py  main.py  ttest.py  utils.py
tests/: conftest.py
tests/critical_es_value/: test_corrtest.py  test_linreg.py  test_main.py  test_ttest.py  test_utils.py
