[project]
name = "critical-es-value"
version = "0.1.0"
description = "Calculate critical effect size values."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
    "pingouin>=0.5.5",
]
authors = [
  {name = "Florian Rohrer", email = "semicolonator@gmail.com"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "jupyter>=1.1.1",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/critical_es_value"]
