[project]
name = "critical-es-value"
version = "0.2.1"
description = "Calculate critical effect size values."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mpmath>=1.3.0",
    "pandas>=2.3.3",
    "pingouin>=0.5.5",
]
authors = [
  {name = "Florian Rohrer", email = "semicolonator@gmail.com"},
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/critical_es_value"]
