[project]
name = "critical-es-value"
version = "0.4.0"
description = "Calculate critical effect size values."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mpmath>=1.3.0",
    "pandas>=2.3.3",
    "pingouin>=0.5.5",
]
authors = [
  {name = "Florian Rohrer", email = "semicolonator@gmail.com"},
]

[project.urls]
Repository = "https://github.com/r0f1/critical_es_value"
Documentation = "https://r0f1.github.io/critical_es_value/"
Homepage = "https://r0f1.github.io/critical_es_value/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pre-commit>=4.3.0",
    "pydata-sphinx-theme>=0.16.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.1",
    "sphinx-autobuild>=2025.8.25",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/critical_es_value"]

[tool.ruff]
line-length = 120
